--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -2,10 +2,10 @@
   hosts: local
   connection: local
   vars:
-    ami_id: ami-09c813fb71547fc4f
-    sg_id: sg-07c8acf3fa6b923fa # replace with your SG ID
+    ami_id: ami-09c813fb71547fc4f6 # amazon linux 2023 in us-east-1
+    sg_id: sg-069f722e1125dd734 # replace with your SG ID
     zone_id: "Z0948150OFPSYTNVYZOY" # replace with your ID
-    domain_name: "daws86s.fun"
+    domain_name: "kranthi.fun"
     # we can pass instances through command line using -e
     # instances: 
     # - mongodb
