--- a/inventory.ini
+++ b/inventory.ini
@@ -2,7 +2,7 @@
 mongodb.kranthi.fun
 
 [redis]
-172.31.28.224
+redis.kranthi.fun
 
 [mysql]
 mysql.kranthi.fun
@@ -17,7 +17,7 @@ catalogue.kranthi.fun
 cart.kranthi.fun
 
 [user]
-172.31.28.224
+
 
 [shipping]
 shipping.kranthi.fun
