--- a/roles/payment/tasks/main.yaml
+++ b/roles/payment/tasks/main.yaml
@@ -6,7 +6,7 @@
 - name: app setup
   ansible.builtin.import_role:
     name: common
-    tasks_from: nodejs.yaml
+    tasks_from: python.yaml
 
 - name: system setup
   ansible.builtin.import_role:
