--- a/inventory.ini
+++ b/inventory.ini
@@ -2,7 +2,7 @@
 mongodb.kranthi.fun
 
 [redis]
-redis.kranthi.fun
+172.31.1.246
 
 [mysql]
 mysql.kranthi.fun
@@ -14,7 +14,7 @@ rabbitmq.kranthi.fun
 catalogue.kranthi.fun
 
 [cart]
-172.31.11.232
+cart.kranthi.fun
 
 [user]
 user.kranthi.fun
