--- a/roles/common/tasks/java.yaml
+++ b/roles/common/tasks/java.yaml
@@ -11,7 +11,8 @@
     chdir: /app
 
 - name: move jar file
-  ansible.builtin.command: src: "somefile-{{ version | default('latest') }}.jar"
+  ansible.builtin.command:
+  src: "somefile-{{ version | default('latest') }}.jar"
 
   args:
     chdir: /app
