--- a/roles/common/tasks/java.yaml
+++ b/roles/common/tasks/java.yaml
@@ -11,6 +11,6 @@
     chdir: /app
 
 - name: move jar file
-  ansible.builtin.command: mv target/{{ component }}- "2.3.4" .jar {{ component }}.jar
+  ansible.builtin.command: mv target/payment.kranthi.fun - "2.3.4" .jar shipping.kranthi.fun.jar
   args:
     chdir: /app
