--- a/roles/common/tasks/java.yaml
+++ b/roles/common/tasks/java.yaml
@@ -11,7 +11,7 @@
     chdir: /app
 
 - name: move jar file
-  ansible.builtin.command: mv target/shipping-{{ version }}.jar shipping.jar
+  ##ansible.builtin.command: mv target/shipping-{{ version }}.jar shipping.jar
   ##mv target/shipping-1.0.jar shipping.jar
   args:
     chdir: /app
