--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -21,8 +21,8 @@
     state: import
     name: all
     login_host: mysql.kranthi.fun
-    login_user: "{{ MYSQL_ROOT_USER }}"
-    login_password: "{{ MYSQL_ROOT_PASSWORD }}"
+    login_user: roboshop
+    login_password: Roboshop123
     target: "{{ item }}"
   loop:
   - /app/db/schema.sql
